made event logging to console more specific, added local data json for type provider

--- a/LeagueTracker/LeagueTracker.fsproj
+++ b/LeagueTracker/LeagueTracker.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="allgamedata.json" />
     <Compile Include="LeagueClient.fs" />
     <Compile Include="EventProcessor.fs" />
     <Compile Include="Program.fs" />
