--- a/LeagueTracker/LeagueTracker.fsproj
+++ b/LeagueTracker/LeagueTracker.fsproj
@@ -6,9 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="allgamedata.json" />
-    <Compile Include="LeagueClient.fs" />
-    <Compile Include="EventProcessor.fs" />
+    <Compile Include="ConsoleHandler.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -17,6 +15,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="OpenAPITypeProvider" Version="2.3.0" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LeagueEventMonitor\LeagueEventMonitor.fsproj" />
   </ItemGroup>
 
 </Project>
