--- a/LeagueEventMonitor/LeagueEventMonitor.fsproj
+++ b/LeagueEventMonitor/LeagueEventMonitor.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Client\Score.fs" />
     <Compile Include="Client\JsonTypes.fs" />
     <Compile Include="Client\LeagueClient.fs" />
+    <Content Include="Data\playerlist.json" />
     <Content Include="Data\events.json" />
     <Content Include="Data\allgamedata.json" />
     <Compile Include="EventHandler.fs" />
@@ -18,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Data" Version="3.3.3" />
+    <PackageReference Include="FSharpPlus" Version="1.0.0" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
   </ItemGroup>
 
