--- a/LeagueTracker/LeagueTracker.fsproj
+++ b/LeagueTracker/LeagueTracker.fsproj
@@ -23,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LeagueEventMonitor\LeagueEventMonitor.fsproj" />
-    <ProjectReference Include="..\MagicHomeController\MagicHomeController.fsproj" />
+    <ProjectReference Include="..\LeagueTracker.EventMonitor\LeagueTracker.EventMonitor.fsproj" />
+    <ProjectReference Include="..\LeagueTracker.MagicHomeController\LeagueTracker.MagicHomeController.fsproj" />
   </ItemGroup>
 
 </Project>
